// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: disabled 1`] = `
<Button
  aria-checked={true}
  className="boolean-toggle boolean-toggle-on"
  disabled={true}
  name="toggle-name"
  onClick={[Function]}
  role="switch"
>
  <div
    className="boolean-toggle-handle"
  >
    <CheckIcon
      size={12}
    />
  </div>
</Button>
`;

exports[`should render correctly: off 1`] = `
<Button
  aria-checked={false}
  className="boolean-toggle"
  disabled={true}
  name="toggle-name"
  onClick={[Function]}
  role="switch"
>
  <div
    className="boolean-toggle-handle"
  >
    <CheckIcon
      size={12}
    />
  </div>
</Button>
`;

exports[`should render correctly: on 1`] = `
<Button
  aria-checked={true}
  className="boolean-toggle boolean-toggle-on"
  disabled={true}
  name="toggle-name"
  onClick={[Function]}
  role="switch"
>
  <div
    className="boolean-toggle-handle"
  >
    <CheckIcon
      size={12}
    />
  </div>
</Button>
`;
